--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="https://avatars0.githubusercontent.com/u/66560547?s=460&u=94ce7a6ae702a8edcbfe72e358d921b668c949ec&v=4" alt="person" />
       <h4>Rishabh Rawat</h4>
       <p>Student , Online Instructor And Web Dev Enthusiast </p>
-      <button class="btn" onclicck="window.location.href='https://www.youtube.com/codingshala'">follow</button>
+      <button class="btn" onclick="window.location.href='https://youtube.com/c/CodingShala'">follow</button>
     </div>
   </body>
-</html>"
+</html>
